feat: add assets folder configuration to pubspec.yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,3 +21,9 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  
+  # Assets configuration
+  assets:
+    - assets/images/products/
+    - assets/images/collections/
+    - assets/images/carousel/
