--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,10 @@ dependencies:
   cupertino_icons: ^1.0.0
   provider: ^6.1.1
   go_router: ^14.0.0
+  # Firebase packages
+  firebase_core: ^3.1.0
+  firebase_auth: ^5.1.0
+  cloud_firestore: ^5.0.0
 
 dev_dependencies:
   flutter_test:
