--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   provider: ^6.1.1
   go_router: ^14.0.0
+  shared_preferences: ^2.2.2
   # Firebase packages
   firebase_core: ^3.1.0
   firebase_auth: ^5.1.0
