--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,11 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  # Testing dependencies
+  mockito: ^5.4.4
+  build_runner: ^2.4.8
+  fake_cloud_firestore: ^3.0.3
+  firebase_auth_mocks: ^0.14.1
 
 flutter:
   uses-material-design: true
