--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dev_dependencies:
   build_runner: ^2.4.8
   fake_cloud_firestore: ^3.0.3
   firebase_auth_mocks: ^0.14.1
+  firebase_core_platform_interface: ^6.0.2
 
 flutter:
   uses-material-design: true
